# chessqt

./: .gitignore  CMakeLists.txt  README.md  chessqt.pro
src/: CMakeLists.txt  boardview.cpp  boardview.h  chessboard.cpp  chessboard.h  login.cpp  login.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  utils.h
stockfish/: AUTHORS  CITATION.cff  CONTRIBUTING.md  README.md
stockfish/engine/tests/: signature.sh
stockfish/src/: score.cpp
